// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Accessory: Represents a car accessory available for sale.
Car: Represents a car available for sale in the dealership.
Customer: Represents a customer who buys cars.
Inventory: Represents inventory levels for cars and accessories at a dealership.
Order: Represents an order made by a customer for accessories.
OrderItem: Represents an item within an order, linking accessories to orders.
Repair: Represents a repair performed on a car.
Service: Represents a service record for a car.
Sale: Represents a transaction of selling a car to a customer.
Salesperson: Represents a salesperson working for the dealership.
Warranty: Represents a warranty purchased for a car.
'''
}

Table Accessory {
    id INTEGER [primary key]
    name VARCHAR 
    price INTEGER 
    }

Table Car {
    id INTEGER [primary key]
    make VARCHAR 
    model VARCHAR 
    year INTEGER 
    price INTEGER 
    }

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    date_of_birth DATE 
    phone_number VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    car_id INTEGER 
    accessory_id INTEGER 
    quantity_in_stock INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATE 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    accessory_id INTEGER 
    quantity INTEGER 
    }

Table Repair {
    id INTEGER [primary key]
    service_id INTEGER 
    repair_date DATE 
    description VARCHAR 
    repair_cost INTEGER 
    }

Table Service {
    id INTEGER [primary key]
    car_id INTEGER 
    service_date DATE 
    description VARCHAR 
    cost INTEGER 
    }

Table Sale {
    id INTEGER [primary key]
    car_id INTEGER 
    customer_id INTEGER 
    salesperson_id INTEGER 
    sale_date DATE 
    }

Table Salesperson {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    hire_date DATE 
    phone_number VARCHAR 
    }

Table Warranty {
    id INTEGER [primary key]
    car_id INTEGER 
    warranty_start_date DATE 
    warranty_end_date DATE 
    warranty_provider VARCHAR 
    coverage_details VARCHAR 
    }



// Relationships
    Ref: Inventory.(accessory_id) < Accessory.(id)
    Ref: Inventory.(car_id) < Car.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(accessory_id) < Accessory.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: Repair.(service_id) < Service.(id)
    Ref: Service.(car_id) < Car.(id)
    Ref: Sale.(car_id) < Car.(id)
    Ref: Sale.(customer_id) < Customer.(id)
    Ref: Sale.(salesperson_id) < Salesperson.(id)
    Ref: Warranty.(car_id) < Car.(id)
